ASSERTION FAILED: writtenAudioDuration >= readAudioDuration in com.apple.WebCore:WebCore::RealtimeOutgoingAudioSource::isReachingBufferedAudioDataHighLimit() + 222 https://bugs.webkit.org/show_bug.cgi?id=175164 <rdar://problem/33712305>

Patch by Youenn Fablet <youenn@apple.com> on 2017-09-15
Reviewed by Eric Carlson.

No observable change of behavior.

* platform/mediastream/mac/RealtimeOutgoingAudioSource.cpp:
(WebCore::RealtimeOutgoingAudioSource::hasBufferedEngouhData):
(WebCore::RealtimeOutgoingAudioSource::audioSamplesAvailable): Calling pullData only if there is at least 0.01 seconds of available data.
* platform/mediastream/mac/RealtimeOutgoingAudioSource.h:

Canonical link: https://commits.webkit.org/193431@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@222109 268f45cc-cd09-0410-ab3c-d52691b4dbfc